Fix header alignment

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,10 +9,10 @@ header{
     img{
       position: absolute;
       top:10px;
-      height: 35px;
-      width: auto;
+      height: auto;
+      width: 140px;
       margin:0;
-      margin-left:-69px;
+      margin-left:-70px;
       z-index: 600;
 
       @media (min-width: $screen-md-min) {
