--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ header {
   header .brand img {
     position: absolute;
     top: 10px;
-    height: 35px;
-    width: auto;
+    height: auto;
+    width: 140px;
     margin: 0;
-    margin-left: -69px;
+    margin-left: -70px;
     z-index: 600; }
     @media (min-width: 900px) {
       header .brand img {
